--- a/trunk/TagLib/pom.xml
+++ b/trunk/TagLib/pom.xml
@@ -11,7 +11,7 @@
   <parent>
   	<artifactId>toobsframework</artifactId>
   	<groupId>org.toobsframework</groupId>
-  	<version>0.0.2</version>
+  	<version>0.0.6-SNAPSHOT</version>
   </parent>
   <build>
     <plugins>
