--- a/trunk/Base/pom.xml
+++ b/trunk/Base/pom.xml
@@ -6,50 +6,50 @@
   <version>${toobs.version}</version>
   <description/>
   <parent>
-  	<artifactId>toobsframework</artifactId>
-  	<groupId>org.toobsframework</groupId>
-  	<version>0.0.2</version>
+    <artifactId>toobsframework</artifactId>
+    <groupId>org.toobsframework</groupId>
+    <version>0.0.6-SNAPSHOT</version>
   </parent>
   <dependencies>
-  	<dependency>
-  	  <groupId>commons-beanutils</groupId>
-  	  <artifactId>commons-beanutils</artifactId>
-  	</dependency>
- 	<dependency>
-  	  <groupId>org.springframework</groupId>
-  	  <artifactId>spring</artifactId>
-  	</dependency>
- 	<dependency>
-  	  <groupId>javax.jms</groupId>
-  	  <artifactId>jms</artifactId>
- 	</dependency>
- 	<dependency>
-  	  <groupId>javax.servlet</groupId>
-  	  <artifactId>servlet-api</artifactId>
- 	</dependency>
- 	<dependency>
-  	  <groupId>org.apache.xmlgraphics</groupId>
-  	  <artifactId>fop</artifactId>
- 	</dependency>
-	<dependency>
-  	  <groupId>opensymphony</groupId>
-  	  <artifactId>quartz</artifactId>
- 	</dependency>
-  	<dependency>
-  	  <groupId>commons-lang</groupId>
-  	  <artifactId>commons-lang</artifactId>
- 	</dependency>
-  	<dependency>
-  	  <groupId>org.htmlparser</groupId>
-  	  <artifactId>htmlparser</artifactId>
- 	</dependency>
-  	<dependency>
-  	  <groupId>javax.mail</groupId>
-  	  <artifactId>mail</artifactId>
- 	</dependency>
-  	<dependency>
-  	  <groupId>commons-betwixt</groupId>
-  	  <artifactId>commons-betwixt</artifactId>
- 	</dependency>
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+    </dependency>
+   <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring</artifactId>
+    </dependency>
+   <dependency>
+      <groupId>javax.jms</groupId>
+      <artifactId>jms</artifactId>
+   </dependency>
+   <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+   </dependency>
+  <dependency>
+      <groupId>opensymphony</groupId>
+      <artifactId>quartz</artifactId>
+   </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+   </dependency>
+    <dependency>
+      <groupId>org.htmlparser</groupId>
+      <artifactId>htmlparser</artifactId>
+   </dependency>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+   </dependency>
+    <dependency>
+      <groupId>commons-betwixt</groupId>
+      <artifactId>commons-betwixt</artifactId>
+   </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+    </dependency>
   </dependencies>
 </project>
