--- a/trunk/PresFramework/pom.xml
+++ b/trunk/PresFramework/pom.xml
@@ -6,64 +6,52 @@
   <version>${toobs.version}</version>
   <description/>
   <parent>
-  	<artifactId>toobsframework</artifactId>
-  	<groupId>org.toobsframework</groupId>
-  	<version>0.0.2</version>
+    <artifactId>toobsframework</artifactId>
+    <groupId>org.toobsframework</groupId>
+    <version>0.0.6-SNAPSHOT</version>
   </parent>
   <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.codehaus.mojo</groupId>
-  			<artifactId>castor-maven-plugin</artifactId>
-  			<version>2.0-alpha1</version>
-  			<executions>
-  				<execution>
-  					<id>generate::componentConfig</id>
-  					<phase>generate-sources</phase>
-  					<goals>
-  						<goal>generate</goal>
-  					</goals>
-					<configuration>
-					  <schema>PresFramework/src/main/castor/componentConfig.xsd</schema>
-					  <packaging>org.toobsframework.pres.component.config</packaging>
-					</configuration>
-  				</execution>
-  				<execution>
-  					<id>generate::componentLayoutConfig</id>
-  					<phase>generate-sources</phase>
-  					<goals>
-  						<goal>generate</goal>
-  					</goals>
-					<configuration>
-					  <schema>PresFramework/src/main/castor/componentLayoutConfig.xsd</schema>
-					  <packaging>org.toobsframework.pres.layout.config</packaging>
-					  <bindingfile>PresFramework/src/main/castor/compBinding.xml</bindingfile>
-					</configuration>
-  				</execution>
-  				<execution>
-  					<id>generate::doItConfig</id>
-  					<phase>generate-sources</phase>
-  					<goals>
-  						<goal>generate</goal>
-  					</goals>
-					<configuration>
-					  <schema>PresFramework/src/main/castor/doItConfig.xsd</schema>
-					  <packaging>org.toobsframework.pres.doit.config</packaging>
-					  <bindingfile>PresFramework/src/main/castor/compBinding.xml</bindingfile>
-					</configuration>
-  				</execution>
-  				<execution>
-  					<id>generate::chartConfig</id>
-  					<phase>generate-sources</phase>
-  					<goals>
-  						<goal>generate</goal>
-  					</goals>
-					<configuration>
-					  <schema>PresFramework/src/main/castor/chartConfig.xsd</schema>
-					  <packaging>org.toobsframework.pres.chart.config</packaging>
-					  <bindingfile>PresFramework/src/main/castor/compBinding.xml</bindingfile>
-					</configuration>
-  				</execution>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>castor-maven-plugin</artifactId>
+        <version>2.0-alpha1</version>
+        <executions>
+          <execution>
+            <id>generate::componentConfig</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          <configuration>
+            <schema>PresFramework/src/main/castor/componentConfig.xsd</schema>
+            <packaging>org.toobsframework.pres.component.config</packaging>
+          </configuration>
+          </execution>
+          <execution>
+            <id>generate::componentLayoutConfig</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          <configuration>
+            <schema>PresFramework/src/main/castor/componentLayoutConfig.xsd</schema>
+            <packaging>org.toobsframework.pres.layout.config</packaging>
+            <bindingfile>PresFramework/src/main/castor/compBinding.xml</bindingfile>
+          </configuration>
+          </execution>
+          <execution>
+            <id>generate::doItConfig</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          <configuration>
+            <schema>PresFramework/src/main/castor/doItConfig.xsd</schema>
+            <packaging>org.toobsframework.pres.doit.config</packaging>
+            <bindingfile>PresFramework/src/main/castor/compBinding.xml</bindingfile>
+          </configuration>
+          </execution>
           <execution>
             <id>generate::toobsApplication</id>
             <phase>generate-sources</phase>
@@ -75,8 +63,8 @@
               <packaging>org.toobsframework.pres.app.config</packaging>
             </configuration>
           </execution>
-  			</executions>
-  		</plugin>
+        </executions>
+      </plugin>
       <plugin>
         <artifactId>maven-source-plugin</artifactId>
         <executions>
@@ -91,35 +79,37 @@
     </plugins>
   </build>
   <dependencies>
-  	<dependency>
-  	  <groupId>org.toobsframework</groupId>
-  	  <artifactId>base</artifactId>
-  	  <version>${toobs.version}</version>
-  	</dependency>
-  	<dependency>
-  	  <groupId>org.toobsframework</groupId>
-  	  <artifactId>transformpipeline</artifactId>
-  	  <version>${toobs.version}</version>
-  	</dependency>
-  	<dependency>
-  	  <groupId>org.springframework</groupId>
-  	  <artifactId>spring-webmvc</artifactId>
+    <dependency>
+      <groupId>org.toobsframework</groupId>
+      <artifactId>base</artifactId>
+      <version>${toobs.version}</version>
     </dependency>
-  	<dependency>
-  	  <groupId>jfree</groupId>
-  	  <artifactId>jfreechart</artifactId>
-  	</dependency>
-  	<dependency>
-  	  <groupId>org.codehaus.castor</groupId>
-  	  <artifactId>castor</artifactId>
-  	</dependency>
-  	<dependency>
-  	  <groupId>commons-jxpath</groupId>
-  	  <artifactId>commons-jxpath</artifactId>
-  	</dependency>
-  	<dependency>
-  	  <groupId>commons-fileupload</groupId>
-  	  <artifactId>commons-fileupload</artifactId>
-  	</dependency>
+    <dependency>
+      <groupId>org.toobsframework</groupId>
+      <artifactId>transformpipeline</artifactId>
+      <version>${toobs.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.castor</groupId>
+      <artifactId>castor</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-jxpath</groupId>
+      <artifactId>commons-jxpath</artifactId>
+      <exclusions>
+      	<exclusion>
+      		<artifactId>xerces</artifactId>
+      		<groupId>xerces</groupId>
+      	</exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+    </dependency>
   </dependencies>
 </project>
