--- a/trunk/TransformPipeline/pom.xml
+++ b/trunk/TransformPipeline/pom.xml
@@ -8,7 +8,7 @@
   <parent>
   	<artifactId>toobsframework</artifactId>
   	<groupId>org.toobsframework</groupId>
-  	<version>0.0.2</version>
+  	<version>0.0.6-SNAPSHOT</version>
   </parent>
   <dependencies>
   	<dependency>
