--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -4,31 +4,40 @@
   <artifactId>toobsframework</artifactId>
   <packaging>pom</packaging>
   <name>toobsframework</name>
-  <version>0.0.2</version>
+  <version>0.0.6-SNAPSHOT</version>
   <description/>
   <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.apache.maven.plugins</groupId>
-  			<artifactId>maven-compiler-plugin</artifactId>
-  			<version>2.0.2</version>
-  			<executions>
-  			</executions>
-			<configuration>
-			  <source>1.5</source>
-			  <target>1.5</target>
-			</configuration>
-  		</plugin>
-  	</plugins>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.0.2</version>
+        <executions>
+        </executions>
+      <configuration>
+        <source>1.5</source>
+        <target>1.5</target>
+      </configuration>
+      </plugin>
+    </plugins>
   </build>
   <modules>
-  	<module>Base</module>
-  	<module>TransformPipeline</module>
-  	<module>BusinessLogic</module>
-  	<module>PresFramework</module>
-  	<module>TagLib</module>
-  	<module>web</module>
+    <module>Base</module>
+    <module>TransformPipeline</module>
+    <module>BusinessLogic</module>
+    <module>PresFramework</module>
+    <module>TagLib</module>
+    <module>Chart</module>
+    <module>Ext</module>
   </modules>
+  <profiles>
+    <profile>
+      <id>sample-web</id>
+      <modules>
+        <module>web</module>
+      </modules>
+    </profile>
+  </profiles>
   <repositories>
     <repository>
       <id>maven2-repository.dev.java.net</id>
@@ -48,256 +57,263 @@
     <repository>
       <id>groups-ext-releases</id>
       <name>Groups Ext Repository</name>
-      <url>http://dev-db5.bix.corp.re1.yahoo.com:8081/artifactory/ext-releases</url>
+      <url>http://artifactory.grp.corp.sp2.yahoo.com:8081/artifactory/ext-releases</url>
     </repository>
     <!-- use the following if you ARE using a snapshot version. -->
     <snapshotRepository>
       <id>groups-ext-releases</id>
       <name>Groups Ext Repository</name>
-      <url>http://dev-db5.bix.corp.re1.yahoo.com:8081/artifactory/ext-releases</url>
+      <url>http://artifactory.grp.corp.sp2.yahoo.com:8081/artifactory/ext-releases</url>
     </snapshotRepository>
   </distributionManagement>
   <dependencyManagement>
-  	<dependencies>
-      	<dependency>
-      		<groupId>org.testng</groupId>
-      		<artifactId>testng</artifactId>
-      		<version>5.8</version>
-      		<type>jar</type>
-      		<classifier>jdk15</classifier>
-      		<scope>test</scope>
-      	</dependency>
-  		<dependency>
-  			<groupId>commons-beanutils</groupId>
-  			<artifactId>commons-beanutils</artifactId>
-  			<version>1.7.0</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-betwixt</groupId>
-  			<artifactId>commons-betwixt</artifactId>
-  			<version>0.8</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-fileupload</groupId>
-  			<artifactId>commons-fileupload</artifactId>
-  			<version>1.2.1</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-jxpath</groupId>
-  			<artifactId>commons-jxpath</artifactId>
-  			<version>1.2</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-lang</groupId>
-  			<artifactId>commons-lang</artifactId>
-  			<version>2.3</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-logging</groupId>
-  			<artifactId>commons-logging</artifactId>
-  			<version>1.1.1</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.htmlparser</groupId>
-  			<artifactId>htmlparser</artifactId>
-  			<version>1.6</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>javax.mail</groupId>
-  			<artifactId>mail</artifactId>
-  			<version>1.4</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>jfree</groupId>
-  			<artifactId>jcommon</artifactId>
-  			<version>1.0.9</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>jfree</groupId>
-  			<artifactId>jfreechart</artifactId>
-  			<version>1.0.5</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>opensymphony</groupId>
-  			<artifactId>quartz</artifactId>
-  			<version>1.5.0</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>rhino</groupId>
-  			<artifactId>js</artifactId>
-  			<version>1.7R1</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring</artifactId>
-  			<version>${spring.version}</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>xalan</groupId>
-  			<artifactId>xalan</artifactId>
-  			<version>2.7.0</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.apache.xmlgraphics</groupId>
-  			<artifactId>xmlgraphics-commons</artifactId>
-  			<version>1.3.1</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.apache.xmlgraphics</groupId>
-  			<artifactId>fop</artifactId>
-  			<version>0.94</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.codehaus.castor</groupId>
-  			<artifactId>castor</artifactId>
-  			<version>1.2</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.codehaus.castor</groupId>
-  			<artifactId>castor-codegen</artifactId>
-  			<version>1.2</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>javax.servlet</groupId>
-  			<artifactId>servlet-api</artifactId>
-  			<version>2.4</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.codehaus.mojo</groupId>
-  			<artifactId>castor-maven-plugin</artifactId>
-  			<version>2.0-alpha1</version>
-  			<type>maven-plugin</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>javax.jms</groupId>
-  			<artifactId>jms</artifactId>
-  			<version>1.1</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>xerces</groupId>
-  			<artifactId>xercesImpl</artifactId>
-  			<version>2.8.1</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring-web</artifactId>
-  			<version>${spring.version}</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring-webmvc</artifactId>
-  			<version>${spring.version}</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring-aspects</artifactId>
-  			<version>${spring.version}</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.hibernate</groupId>
-  			<artifactId>hibernate</artifactId>
-  			<version>3.2.6.ga</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>mysql</groupId>
-  			<artifactId>mysql-connector-java</artifactId>
-  			<version>5.1.6</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>javax.activation</groupId>
-  			<artifactId>activation</artifactId>
-  			<version>1.1</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-collections</groupId>
-  			<artifactId>commons-collections</artifactId>
-  			<version>3.2.1</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
-  		</dependency>
-	    <dependency>
-	      <groupId>log4j</groupId>
-	      <artifactId>log4j</artifactId>
-	      <version>1.2.15</version>
-	      <type>jar</type>
-	      <scope>compile</scope>
-	      <exclusions>
-	      	<exclusion>
-	      		<artifactId>jmxtools</artifactId>
-	      		<groupId>com.sun.jdmk</groupId>
-	      	</exclusion>
-	      	<exclusion>
-	      		<artifactId>jmxri</artifactId>
-	      		<groupId>com.sun.jmx</groupId>
-	      	</exclusion>
-	      </exclusions>
-	    </dependency>
-	    <dependency>
-	    	<groupId>org.mortbay.jetty</groupId>
-	    	<artifactId>jetty</artifactId>
-	    	<version>6.1.11</version>
-	    	<type>jar</type>
-	    	<scope>compile</scope>
-	    </dependency>
-  	</dependencies>
+    <dependencies>
+        <dependency>
+          <groupId>org.testng</groupId>
+          <artifactId>testng</artifactId>
+          <version>5.8</version>
+          <type>jar</type>
+          <classifier>jdk15</classifier>
+          <scope>test</scope>
+        </dependency>
+      <dependency>
+        <groupId>commons-beanutils</groupId>
+        <artifactId>commons-beanutils</artifactId>
+        <version>1.7.0</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-betwixt</groupId>
+        <artifactId>commons-betwixt</artifactId>
+        <version>0.8</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>1.2.1</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-jxpath</groupId>
+        <artifactId>commons-jxpath</artifactId>
+        <version>1.2</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>2.3</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.1.1</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.htmlparser</groupId>
+        <artifactId>htmlparser</artifactId>
+        <version>1.6</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+        <version>1.4</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>jfree</groupId>
+        <artifactId>jcommon</artifactId>
+        <version>1.0.9</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>jfree</groupId>
+        <artifactId>jfreechart</artifactId>
+        <version>1.0.5</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>opensymphony</groupId>
+        <artifactId>quartz</artifactId>
+        <version>1.5.0</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>rhino</groupId>
+        <artifactId>js</artifactId>
+        <version>1.7R1</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring</artifactId>
+        <version>${spring.version}</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>xalan</groupId>
+        <artifactId>xalan</artifactId>
+        <version>2.7.1</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.xmlgraphics</groupId>
+        <artifactId>xmlgraphics-commons</artifactId>
+        <version>1.3.1</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.xmlgraphics</groupId>
+        <artifactId>fop</artifactId>
+        <version>0.94</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.codehaus.castor</groupId>
+        <artifactId>castor</artifactId>
+        <version>1.2</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.codehaus.castor</groupId>
+        <artifactId>castor-codegen</artifactId>
+        <version>1.2</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.4</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>castor-maven-plugin</artifactId>
+        <version>2.0-alpha1</version>
+        <type>maven-plugin</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.jms</groupId>
+        <artifactId>jms</artifactId>
+        <version>1.1</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>xerces</groupId>
+        <artifactId>xercesImpl</artifactId>
+        <version>2.8.1</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${spring.version}</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aspects</artifactId>
+        <version>${spring.version}</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate</artifactId>
+        <version>3.2.6.ga</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>5.1.6</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.1</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-collections</groupId>
+        <artifactId>commons-collections</artifactId>
+        <version>3.2.1</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.15</version>
+        <type>jar</type>
+        <scope>compile</scope>
+        <exclusions>
+          <exclusion>
+            <artifactId>jmxtools</artifactId>
+            <groupId>com.sun.jdmk</groupId>
+          </exclusion>
+          <exclusion>
+            <artifactId>jmxri</artifactId>
+            <groupId>com.sun.jmx</groupId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty</artifactId>
+        <version>6.1.11</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.3</version>
+        <type>jar</type>
+        <scope>compile</scope>
+      </dependency>
+    </dependencies>
   </dependencyManagement>
   <properties>
-  	<toobs.version>0.0.2-SNAPSHOT</toobs.version>
-  	<spring.version>2.5.5</spring.version>
+    <toobs.version>0.0.6-SNAPSHOT</toobs.version>
+    <spring.version>2.5.5</spring.version>
   </properties>
 </project>
