--- a/trunk/web/pom.xml
+++ b/trunk/web/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>toobsframework</artifactId>
     <groupId>org.toobsframework</groupId>
-    <version>0.0.2</version>
+    <version>0.0.6-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.toobsframework</groupId>
@@ -85,14 +85,6 @@
   			<artifactId>mail</artifactId>
   		</dependency>
   		<dependency>
-  			<groupId>jfree</groupId>
-  			<artifactId>jcommon</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>jfree</groupId>
-  			<artifactId>jfreechart</artifactId>
-  		</dependency>
-  		<dependency>
   			<groupId>opensymphony</groupId>
   			<artifactId>quartz</artifactId>
   		</dependency>
@@ -107,14 +99,6 @@
   		<dependency>
   			<groupId>xalan</groupId>
   			<artifactId>xalan</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.apache.xmlgraphics</groupId>
-  			<artifactId>xmlgraphics-commons</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.apache.xmlgraphics</groupId>
-  			<artifactId>fop</artifactId>
   		</dependency>
   		<dependency>
   			<groupId>org.codehaus.castor</groupId>
@@ -159,13 +143,6 @@
   		<dependency>
   			<groupId>log4j</groupId>
   			<artifactId>log4j</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.mortbay.jetty</groupId>
-  			<artifactId>jetty</artifactId>
-  			<version>6.1.11</version>
-  			<type>jar</type>
-  			<scope>compile</scope>
   		</dependency>
   	</dependencies>
 </project>
