--- a/trunk/Ext/pom.xml
+++ b/trunk/Ext/pom.xml
@@ -6,14 +6,14 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.toobsframework</groupId>
-  <artifactId>ext</artifactId>
-  <name>ext</name>
+  <artifactId>toobsframework-ext</artifactId>
+  <name>toobsframework-ext</name>
   <version>${toobs.version}</version>
 
   <dependencies>
     <dependency>
       <groupId>org.toobsframework</groupId>
-      <artifactId>base</artifactId>
+      <artifactId>toobsframework-base</artifactId>
       <version>${toobs.version}</version>
     </dependency>
 
