--- a/trunk/PresFramework/pom.xml
+++ b/trunk/PresFramework/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.toobsframework</groupId>
-  <artifactId>presentation</artifactId>
-  <name>presentation</name>
+  <artifactId>toobsframework-presentation</artifactId>
+  <name>toobsframework-presentation</name>
   <version>${toobs.version}</version>
   <description/>
   <parent>
@@ -81,12 +81,12 @@
   <dependencies>
     <dependency>
       <groupId>org.toobsframework</groupId>
-      <artifactId>base</artifactId>
+      <artifactId>toobsframework-base</artifactId>
       <version>${toobs.version}</version>
     </dependency>
     <dependency>
       <groupId>org.toobsframework</groupId>
-      <artifactId>transformpipeline</artifactId>
+      <artifactId>toobsframework-transformpipeline</artifactId>
       <version>${toobs.version}</version>
     </dependency>
     <dependency>
