--- a/trunk/TransformPipeline/pom.xml
+++ b/trunk/TransformPipeline/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.toobsframework</groupId>
-  <artifactId>transformpipeline</artifactId>
-  <name>transformpipeline</name>
+  <artifactId>toobsframework-transformpipeline</artifactId>
+  <name>toobsframework-transformpipeline</name>
   <version>${toobs.version}</version>
   <description/>
   <parent>
@@ -13,7 +13,7 @@
   <dependencies>
   	<dependency>
   	  <groupId>org.toobsframework</groupId>
-  	  <artifactId>base</artifactId>
+  	  <artifactId>toobsframework-base</artifactId>
   	  <version>${toobs.version}</version>
   	</dependency>
   	<dependency>
