--- a/trunk/web/pom.xml
+++ b/trunk/web/pom.xml
@@ -12,137 +12,147 @@
   <version>${toobs.version}</version>
   <description/>
   <build>
-  	<resources>
-  		<resource>
-  			<directory>src/main/resources</directory>
-  		</resource>
-  	</resources>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.mortbay.jetty</groupId>
-  			<artifactId>maven-jetty-plugin</artifactId>
-  			<version>6.1.11</version>
-  		</plugin>
-  	</plugins>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+      </resource>
+    </resources>
+    <plugins>
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>maven-jetty-plugin</artifactId>
+        <version>6.1.11</version>
+      </plugin>
+    </plugins>
   </build>
-  	<dependencies>
-	  	<dependency>
-	  	  <groupId>org.toobsframework</groupId>
-	  	  <artifactId>base</artifactId>
-	  	  <version>${toobs.version}</version>
-	  	</dependency>
-	  	<dependency>
-	  	  <groupId>org.toobsframework</groupId>
-	  	  <artifactId>transformpipeline</artifactId>
-	  	  <version>${toobs.version}</version>
-	  	</dependency>
-	  	<dependency>
-	  	  <groupId>org.toobsframework</groupId>
-	  	  <artifactId>presentation</artifactId>
-	  	  <version>${toobs.version}</version>
-	  	</dependency>
-	  	<dependency>
-	  	  <groupId>org.toobsframework</groupId>
-	  	  <artifactId>businesslogic</artifactId>
-	  	  <version>${toobs.version}</version>
-	  	</dependency>
-  		<dependency>
-  			<groupId>commons-beanutils</groupId>
-  			<artifactId>commons-beanutils</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-betwixt</groupId>
-  			<artifactId>commons-betwixt</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-fileupload</groupId>
-  			<artifactId>commons-fileupload</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-jxpath</groupId>
-  			<artifactId>commons-jxpath</artifactId>
-  			<exclusions>
-  				<exclusion>
-  					<artifactId>xerces</artifactId>
-  					<groupId>xerces</groupId>
-  				</exclusion>
-  			</exclusions>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-lang</groupId>
-  			<artifactId>commons-lang</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-logging</groupId>
-  			<artifactId>commons-logging</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.htmlparser</groupId>
-  			<artifactId>htmlparser</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>javax.mail</groupId>
-  			<artifactId>mail</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>opensymphony</groupId>
-  			<artifactId>quartz</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>rhino</groupId>
-  			<artifactId>js</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>xalan</groupId>
-  			<artifactId>xalan</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.codehaus.castor</groupId>
-  			<artifactId>castor</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>javax.jms</groupId>
-  			<artifactId>jms</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>xerces</groupId>
-  			<artifactId>xercesImpl</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring-web</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring-webmvc</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.springframework</groupId>
-  			<artifactId>spring-aspects</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>org.hibernate</groupId>
-  			<artifactId>hibernate</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>mysql</groupId>
-  			<artifactId>mysql-connector-java</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>javax.activation</groupId>
-  			<artifactId>activation</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>commons-collections</groupId>
-  			<artifactId>commons-collections</artifactId>
-  		</dependency>
-  		<dependency>
-  			<groupId>log4j</groupId>
-  			<artifactId>log4j</artifactId>
-  		</dependency>
-  	</dependencies>
+    <dependencies>
+      <dependency>
+        <groupId>org.toobsframework</groupId>
+        <artifactId>base</artifactId>
+        <version>${toobs.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.toobsframework</groupId>
+        <artifactId>transformpipeline</artifactId>
+        <version>${toobs.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.toobsframework</groupId>
+        <artifactId>presentation</artifactId>
+        <version>${toobs.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.toobsframework</groupId>
+        <artifactId>businesslogic</artifactId>
+        <version>${toobs.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.toobsframework</groupId>
+        <artifactId>chart</artifactId>
+        <version>${toobs.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.toobsframework</groupId>
+        <artifactId>ext</artifactId>
+        <version>${toobs.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-beanutils</groupId>
+        <artifactId>commons-beanutils</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>commons-betwixt</groupId>
+        <artifactId>commons-betwixt</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>commons-jxpath</groupId>
+        <artifactId>commons-jxpath</artifactId>
+        <exclusions>
+          <exclusion>
+            <artifactId>xerces</artifactId>
+            <groupId>xerces</groupId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.htmlparser</groupId>
+        <artifactId>htmlparser</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>javax.mail</groupId>
+        <artifactId>mail</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>opensymphony</groupId>
+        <artifactId>quartz</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>rhino</groupId>
+        <artifactId>js</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>xalan</groupId>
+        <artifactId>xalan</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.codehaus.castor</groupId>
+        <artifactId>castor</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>javax.jms</groupId>
+        <artifactId>jms</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>xerces</groupId>
+        <artifactId>xercesImpl</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aspects</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aop</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>commons-collections</groupId>
+        <artifactId>commons-collections</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+      </dependency>
+    </dependencies>
 </project>
