Created release target to snapshot and version xsds to get them ready to upload to the web site

--- a/trunk/PresFramework/pom.xml
+++ b/trunk/PresFramework/pom.xml
@@ -76,8 +76,28 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.toobsframework</groupId>
+        <artifactId>toobsframework-mojo</artifactId>
+        <version>${toobs.version}</version>
+        <executions>
+          <execution>
+           <id>release-xsd</id>
+           <goals>
+             <goal>release-xsd</goal>
+           </goals>
+           <configuration>
+             <source>src/main/castor</source>
+             <target>target/release-xsds</target>
+             <version>${toobs.schema.version}</version>
+             <verbose>false</verbose>
+           </configuration>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
+  
   <dependencies>
     <dependency>
       <groupId>org.toobsframework</groupId>
