--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" output="Mojo/target/classes" path="Mojo/src/main/java"/>
 	<classpathentry kind="src" output="Base/target/classes" path="Base/src/main/java"/>
 	<classpathentry kind="src" output="Base/target/test-classes" path="Base/src/test/java"/>
 	<classpathentry kind="src" output="TransformPipeline/target/classes" path="TransformPipeline/src/main/java"/>
@@ -7,6 +8,7 @@
 	<classpathentry kind="src" output="BusinessLogic/target/classes" path="BusinessLogic/src/main/java"/>
 	<classpathentry kind="src" output="BusinessLogic/target/test-classes" path="BusinessLogic/src/test/java"/>
 	<classpathentry kind="src" output="PresFramework/target/classes" path="PresFramework/src/main/java"/>
+	<classpathentry kind="src" path="PresFramework/src/main/castor"/>
 	<classpathentry kind="src" output="PresFramework/target/classes" path="PresFramework/target/generated-sources/castor"/>
 	<classpathentry excluding="**" kind="src" output="PresFramework/target/classes" path="PresFramework/src/main/resources"/>
 	<classpathentry kind="src" output="PresFramework/target/test-classes" path="PresFramework/src/test/java"/>
