--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.toobsframework</groupId>
@@ -22,6 +23,7 @@
     </plugins>
   </build>
   <modules>
+    <module>Mojo</module>
     <module>Base</module>
     <module>TransformPipeline</module>
     <module>BusinessLogic</module>
@@ -335,6 +337,7 @@
   </dependencyManagement>
   <properties>
     <toobs.version>0.1.0-SNAPSHOT</toobs.version>
+    <toobs.schema.version>0.1.0</toobs.schema.version>
     <spring.version>2.5.5</spring.version>
   </properties>
 </project>
