Adding first cut at example app.  Partial work

--- a/trunk/Mojo/pom.xml
+++ b/trunk/Mojo/pom.xml
@@ -8,7 +8,7 @@
   <groupId>org.toobsframework</groupId>
   <artifactId>toobsframework-mojo</artifactId>
   <packaging>maven-plugin</packaging>
-  <name>Maven plugins for building the rest of the toobs framework</name>
+  <name>Maven plugins for building the framework</name>
   <version>${toobs.version}</version>
   <url>http://maven.apache.org</url>
   <dependencies>
