--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -24,6 +24,13 @@
 	<classpathentry excluding="**" kind="src" output="Ext/target/classes" path="Ext/src/main/resources"/>
 	<classpathentry kind="src" output="Ext/target/test-classes" path="Ext/src/test/java"/>
 	<classpathentry excluding="**" kind="src" output="Ext/target/test-classes" path="Ext/src/test/resources"/>
+	<classpathentry kind="src" path="Social/src/main/castor"/>
+	<classpathentry kind="src" path="Social/src/main/java"/>
+	<classpathentry kind="src" path="Social/target/generated-sources/castor"/>
+	<classpathentry kind="src" path="Social/src/main/resources"/>
+	<classpathentry kind="src" path="Social/src/main/webapp"/>
+	<classpathentry kind="src" path="Social/src/test/java"/>
+	<classpathentry kind="src" path="Social/src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
