--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -31,6 +31,7 @@
     <module>TagLib</module>
     <module>Chart</module>
     <module>Ext</module>
+    <module>Social</module>
   </modules>
   <profiles>
     <profile>
