Changing the way we do empty strings in ParameterUtil and making sure that ComponentHelper is consistent with the definition of the xsd

--- a/trunk/Social/pom.xml
+++ b/trunk/Social/pom.xml
@@ -38,6 +38,14 @@
         <configuration>
           <contextPath>/social</contextPath>
         </configuration>
+       <dependencies>
+        <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.13</version>
+          <type>jar</type>
+        </dependency>
+       </dependencies>
       </plugin>
     </plugins>
   </build>
