Make it so resource loading will work with either classpath or servlet context Add /WEB-INF to default resource paths Clean up some stuff Add properties for reload, chain and translet Fix some of the reload logic

--- a/trunk/PresFramework/pom.xml
+++ b/trunk/PresFramework/pom.xml
@@ -139,6 +139,10 @@
           <groupId>xml-apis</groupId>
           <artifactId>xml-apis</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>ant</groupId>
+          <artifactId>ant-optional</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
