--- a/trunk/web/pom.xml
+++ b/trunk/web/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>toobsframework</artifactId>
     <groupId>org.toobsframework</groupId>
-    <version>0.0.6-SNAPSHOT</version>
+    <version>0.0.7-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.toobsframework</groupId>
@@ -28,32 +28,32 @@
     <dependencies>
       <dependency>
         <groupId>org.toobsframework</groupId>
-        <artifactId>base</artifactId>
+        <artifactId>toobsframework-base</artifactId>
         <version>${toobs.version}</version>
       </dependency>
       <dependency>
         <groupId>org.toobsframework</groupId>
-        <artifactId>transformpipeline</artifactId>
+        <artifactId>toobsframework-transformpipeline</artifactId>
         <version>${toobs.version}</version>
       </dependency>
       <dependency>
         <groupId>org.toobsframework</groupId>
-        <artifactId>presentation</artifactId>
+        <artifactId>toobsframework-presentation</artifactId>
         <version>${toobs.version}</version>
       </dependency>
       <dependency>
         <groupId>org.toobsframework</groupId>
-        <artifactId>businesslogic</artifactId>
+        <artifactId>toobsframework-businesslogic</artifactId>
         <version>${toobs.version}</version>
       </dependency>
       <dependency>
         <groupId>org.toobsframework</groupId>
-        <artifactId>chart</artifactId>
+        <artifactId>toobsframework-chart</artifactId>
         <version>${toobs.version}</version>
       </dependency>
       <dependency>
         <groupId>org.toobsframework</groupId>
-        <artifactId>ext</artifactId>
+        <artifactId>toobsframework-ext</artifactId>
         <version>${toobs.version}</version>
       </dependency>
       <dependency>
