Rework passing of http request and response to use IRequest Add transformStream method for xsl transformers Add template caching to static transformer 2 phase layout processing to ensure parent layouts are loaded before children

--- a/trunk/PresFramework/pom.xml
+++ b/trunk/PresFramework/pom.xml
@@ -24,7 +24,7 @@
               <goal>generate</goal>
             </goals>
           <configuration>
-            <schema>PresFramework/src/main/castor/componentConfig.xsd</schema>
+            <schema>${basedir}/src/main/castor/componentConfig.xsd</schema>
             <packaging>org.toobsframework.pres.component.config</packaging>
           </configuration>
           </execution>
@@ -35,9 +35,9 @@
               <goal>generate</goal>
             </goals>
           <configuration>
-            <schema>PresFramework/src/main/castor/componentLayoutConfig.xsd</schema>
+            <schema>${basedir}/src/main/castor/componentLayoutConfig.xsd</schema>
             <packaging>org.toobsframework.pres.layout.config</packaging>
-            <bindingfile>PresFramework/src/main/castor/compBinding.xml</bindingfile>
+            <bindingfile>${basedir}/src/main/castor/compBinding.xml</bindingfile>
           </configuration>
           </execution>
           <execution>
@@ -47,9 +47,9 @@
               <goal>generate</goal>
             </goals>
           <configuration>
-            <schema>PresFramework/src/main/castor/doItConfig.xsd</schema>
+            <schema>${basedir}/src/main/castor/doItConfig.xsd</schema>
             <packaging>org.toobsframework.pres.doit.config</packaging>
-            <bindingfile>PresFramework/src/main/castor/compBinding.xml</bindingfile>
+            <bindingfile>${basedir}/src/main/castor/compBinding.xml</bindingfile>
           </configuration>
           </execution>
           <execution>
@@ -70,7 +70,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <schema>PresFramework/src/main/castor/toobsApplication.xsd</schema>
+              <schema>${basedir}/src/main/castor/toobsApplication.xsd</schema>
               <packaging>org.toobsframework.pres.app.config</packaging>
             </configuration>
           </execution>
