--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -9,7 +9,6 @@
 	<classpathentry kind="src" output="BusinessLogic/target/test-classes" path="BusinessLogic/src/test/java"/>
 	<classpathentry kind="src" output="PresFramework/target/classes" path="PresFramework/src/main/java"/>
 	<classpathentry kind="src" output="PresFramework/target/classes" path="PresFramework/target/generated-sources/castor"/>
-	<classpathentry kind="src" path="PresFramework/src/main/castor"/>
 	<classpathentry excluding="**" kind="src" output="PresFramework/target/classes" path="PresFramework/src/main/resources"/>
 	<classpathentry kind="src" output="PresFramework/target/test-classes" path="PresFramework/src/test/java"/>
 	<classpathentry kind="src" output="TagLib/target/classes" path="TagLib/src/main/java"/>
@@ -29,7 +28,10 @@
 	<classpathentry excluding="**" kind="src" output="Social/target/classes" path="Social/src/main/resources"/>
 	<classpathentry kind="src" output="Social/target/test-classes" path="Social/src/test/java"/>
 	<classpathentry excluding="**" kind="src" output="Social/target/test-classes" path="Social/src/test/resources"/>
-	<classpathentry kind="src" path="Social/src/main/castor"/>
+	<classpathentry kind="src" output="web/target/classes" path="web/src/main/java"/>
+	<classpathentry excluding="**" kind="src" output="web/target/classes" path="web/src/main/resources"/>
+	<classpathentry kind="src" output="web/target/test-classes" path="web/src/test/java"/>
+	<classpathentry excluding="**" kind="src" output="web/target/test-classes" path="web/src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
