--- a/trunk/Chart/pom.xml
+++ b/trunk/Chart/pom.xml
@@ -24,7 +24,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <schema>Chart/src/main/castor/chartConfig.xsd</schema>
+              <schema>${basedir}/src/main/castor/chartConfig.xsd</schema>
               <packaging>org.toobsframework.pres.chart.config</packaging>
               <bindingfile>Chart/src/main/castor/compBinding.xml</bindingfile>
             </configuration>
