--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -28,10 +28,9 @@
 	<classpathentry excluding="**" kind="src" output="Social/target/classes" path="Social/src/main/resources"/>
 	<classpathentry kind="src" output="Social/target/test-classes" path="Social/src/test/java"/>
 	<classpathentry excluding="**" kind="src" output="Social/target/test-classes" path="Social/src/test/resources"/>
-	<classpathentry kind="src" output="web/target/classes" path="web/src/main/java"/>
-	<classpathentry excluding="**" kind="src" output="web/target/classes" path="web/src/main/resources"/>
-	<classpathentry kind="src" output="web/target/test-classes" path="web/src/test/java"/>
-	<classpathentry excluding="**" kind="src" output="web/target/test-classes" path="web/src/test/resources"/>
+	<classpathentry kind="src" path="Social/src/main/webapp/static"/>
+	<classpathentry kind="src" path="Social/src/main/castor"/>
+	<classpathentry excluding="static/" kind="src" path="Social/src/main/webapp"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
