--- a/trunk/Social/pom.xml
+++ b/trunk/Social/pom.xml
@@ -6,10 +6,10 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.toobsframework</groupId>
-  <artifactId>toosframework-social-example</artifactId>
+  <artifactId>toobsframework-social-example</artifactId>
   <packaging>war</packaging>
-  <name>Toobs example - social app</name>
-  <version>0.1.0-SNAPSHOT</version>
+  <name>toobsframework-social-example</name>
+  <version>3.1.0-SNAPSHOT</version>
 
   <build>
     <plugins>
@@ -36,7 +36,7 @@
         <artifactId>maven-jetty-plugin</artifactId>
         <version>6.1.10</version>
         <configuration>
-          <contextPath>/social</contextPath>
+          <contextPath>/</contextPath>
         </configuration>
        <dependencies>
         <dependency>
