Fixes for POM issues in social and chart Moved chart to use version 3.1.0 of component xsd

--- a/trunk/Chart/pom.xml
+++ b/trunk/Chart/pom.xml
@@ -26,7 +26,7 @@
             <configuration>
               <schema>${basedir}/src/main/castor/chartConfig.xsd</schema>
               <packaging>org.toobsframework.pres.chart.config</packaging>
-              <bindingfile>Chart/src/main/castor/compBinding.xml</bindingfile>
+              <bindingfile>${basedir}/src/main/castor/compBinding.xml</bindingfile>
             </configuration>
           </execution>
         </executions>
