Intermediate checkin with some more changes coming in social and security

--- a/trunk/Social/pom.xml
+++ b/trunk/Social/pom.xml
@@ -66,6 +66,18 @@
       <artifactId>spring-webmvc</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core-tiger</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-acl</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.codehaus.castor</groupId>
       <artifactId>castor</artifactId>
     </dependency>
