--- a/trunk/Social/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/Social/src/main/webapp/WEB-INF/web.xml
@@ -10,9 +10,20 @@
     <param-value>
       classpath:toobs-default-context.xml
       classpath:social-context.xml
+      classpath:social-security.xml
     </param-value>
   </context-param>
-    
+
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
   <listener>  
     <listener-class>org.toobsframework.servlet.ContextListener</listener-class>
   </listener>
@@ -37,4 +48,8 @@
      <servlet-name>static</servlet-name> 
      <url-pattern>/static/*</url-pattern> 
   </servlet-mapping>
+  
+  <welcome-file-list>
+    <welcome-file>/login</welcome-file>
+  </welcome-file-list>
 </web-app>
